# lifepp

./: LICENSE  backend.c  block_list.c  file_handle.c  hash_table.c  heap.c  main.cpp  ui.cpp  ui_2.c  ui_2.cpp  ui_3.c  ui_3.cpp
include/: block_list.h  file_handle.h  queue.h  ui.h  ui_2.h  ui_3.h
source/: source.rc
working_dir/: CMakeLists.txt  queue.c
working_dir/include/: backend.h  connector.h  hash_table.h  heap.h
