cmake_minimum_required(VERSION 3.26.3)
set(CMAKE_FORCE_C_COMPILER ON)
set(CMAKE_FORCE_CXX_COMPILER ON)
set(CMAKE_C_COMPILER "gcc")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c2x -Ofast -Wl,--stack=1073741824")
set(CMAKE_CXX_COMPILER "g++")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++2a -Ofast -Wl,--stack=1073741824")

project(Life++)
set(C_SRC_LIST backend.c block_list.c hash_table.c heap.c queue.c file_handle.c)
set(CPP_SRC_LIST ui.cpp ui_2.cpp ui_3.cpp)
include_directories(include ege/include)
link_directories(ege/lib)
add_executable(${PROJECT_NAME} main.cpp source/source.rc ${C_SRC_LIST} ${CPP_SRC_LIST})
target_link_libraries(${PROJECT_NAME} -lgraphics64 -lgdiplus -luuid -lmsimg32 -lgdi32 -limm32 -lole32 -loleaut32 -lwinmm)